# sql-reviewer-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  sql_reviewer_env.py
server/: app.py
